# KernSigner

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  RELEASE_NOTES_0.0.7-rc1.md  ROADMAP.md  partitions.high_value.csv  sdkconfig.defaults  sdkconfig.defaults.high_value  sdkconfig.defaults.wave_35  sdkconfig.defaults.wave_43  sdkconfig.defaults.wave_4b  sdkconfig.defaults.wave_5  sdkconfig.release.wave_43
components/mbedtls_compat/: CMakeLists.txt
components/wave_35/: CMakeLists.txt
components/zbar_qr/: CMakeLists.txt
components/zbar_qr/include/: zbar_qr.h
components/zbar_qr/src/: zbar_qr.c
components/zbar_qr/test/: CMakeLists.txt  test_zbar_qr.c
components/zbar_qr/zbar/: config.h  image.c
docs/: ANDROID_RELAY_WALLET_GUIDE.zh-CN.md  BACKUP_AND_RECOVERY_GUIDE.zh-CN.md  BUILD_FLASH_DEBUG_GUIDE.zh-CN.md  COMMERCIAL_RELEASE_GATE.md  DELIVERY_STATUS.md  DOCUMENTATION_COVERAGE.md  FLASH_PRECHECK.md  HARDWARE_OVERVIEW_AND_OTG.md  HIGH_VALUE_SECURITY_TARGET.zh-CN.md  KRUX_SATOCHIP_GAP_REPORT.md  MNEMONIC_CREATION_BIP39_VERIFY.zh-CN.md  MORNING_HANDOVER.md  MULTI_EXPERT_REVIEW_20260519_2.md  MULTI_EXPERT_REVIEW_20260520_SMARTCARD.md  MULTI_EXPERT_REVIEW_20260520_SMARTCARD_SECOND_PASS.md  MULTI_ROLE_REVIEW_20260519.md  NFC_SMARTCARD_OPERATION_AND_TROUBLESHOOTING.zh-CN.md  NFC_SMARTCARD_TEST.zh-CN.md  OKX_QR_SCAN_INCIDENT_20260523.zh-CN.md  PN5180_NFC_WIRING_AND_USAGE.zh-CN.md  PROJECT_NOTICE.md  PROJECT_PROGRESS_AND_PLAN.md  QR_CAMERA_TROUBLESHOOTING.zh-CN.md  README.md  README_FIRST_DELIVERY.md  REFERENCE_PROJECT_MAPPING.md  (+36 more)
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/core/: base43.c  base43.h  btc_derivation.c  btc_derivation.h  custom_derivation.c  custom_derivation.h  descriptor_validator.c  eip712.c  eip712.h  error.c  error.h  evm.c  evm.h  kef.c  key.c  key.h  message_sign.c  message_sign.h  mnemonic_slots.c  mnemonic_slots.h  mnemonic_tools.c  mnemonic_tools.h  pin.c  pin.h  psbt.c  psbt.h  session.c  session.h  settings.c  settings.h  storage.c  storage.h  wallet.c
main/core/test/: Makefile  test_btc_derivation.c  test_custom_derivation.c  test_message_sign.c  test_mnemonic_tools.c  test_psbt_classify.c  test_qr_relay_parser.c
main/core/test/stubs/: key_stub.c
main/i18n/: i18n.c  i18n.h  i18n_min.c
main/krux_port/: krux_camera_preview.c  krux_camera_preview.h  krux_feature_catalog.c  krux_feature_catalog.h  krux_hardware_probe.c  krux_hardware_probe.h  krux_qr_decoder.c  krux_qr_decoder.h  krux_services.c  krux_services.h  krux_storage_browser.c  krux_storage_browser.h
main/pages/: capture_entropy.c  load_descriptor_storage.c  passphrase.c  screensaver.c  store_descriptor.c  store_mnemonic.c
main/pages/dev_tools/: decode_snapshots.c  dev_menu.c  snapshot.c
main/pages/home/: addresses.c  home.c  public_key.c  public_key.h
main/pages/home/backup/: backup_menu.c  mnemonic_1248.c  mnemonic_1248.h  mnemonic_entropy.c  mnemonic_entropy.h  mnemonic_grid.c  mnemonic_grid.h  mnemonic_qr.c  mnemonic_steel.c  mnemonic_steel.h  mnemonic_tinyseed.c  mnemonic_tinyseed.h  mnemonic_words.c
main/pages/krux_shell/: krux_shell.c  krux_shell.h
main/pages/load_mnemonic/: load_menu.c  load_punch_grid.c  load_punch_grid.h  load_storage.c  manual_input.c  stackbit_restore.c  stackbit_restore.h  tinyseed_restore.c  tinyseed_restore.h
main/pages/login/: about.c  login.c  login_settings.c
main/pages/new_mnemonic/: dice_rolls.c  entropy_from_camera.c  new_mnemonic_menu.c
main/pages/pin/: pin_page.c  pin_settings.c  pin_settings.h
main/pages/scan/: scan.c  scan.h
main/pages/settings/: descriptor_manager.c  wallet_settings.c
main/pages/shared/: address_checker.c  bip39_check_page.c  bip39_check_page.h  custom_derivation_page.c  custom_derivation_page.h  descriptor_loader.c  kef_decrypt_page.c  kef_encrypt_page.c  key_confirmation.c  loaded_mnemonic_menu.c  loaded_mnemonic_menu.h  mnemonic_editor.c  mnemonic_slots_page.c  mnemonic_slots_page.h  mnemonic_tool_page.c  mnemonic_tool_page.h  sensitive_pin.c  sensitive_pin.h  storage_browser.c  wipe_flash_dialog.c
main/pages/signer_shell/: signer_shell.c  signer_shell.h
main/qr/: encoder.c  encoder.h  parser.c  parser.h  scanner.c  scanner.h  viewer.c  viewer.h
main/signer_port/: signer_camera_preview.c  signer_camera_preview.h  signer_feature_catalog.c  signer_feature_catalog.h  signer_hardware_probe.c  signer_hardware_probe.h  signer_qr_decoder.c  signer_qr_decoder.h  signer_services.c  signer_services.h  signer_storage_browser.c  signer_storage_browser.h
main/smartcard/: smartcard_ccid.c  smartcard_ccid.h  smartcard_pn5180.c  smartcard_pn5180.h  smartcard_pn532.c  smartcard_pn532.h  smartcard_satochip.c  smartcard_satochip.h  smartcard_transport.c  smartcard_transport.h
main/smartcard/cert/: ca.cert  subca-satochip.cert  test-ca.cert  test-subca-satochip.cert
main/ui/: battery.c  dialog.c  dialog.h  i18n_text.c  i18n_text.h  input_helpers.c  input_helpers.h  key_info.c  keyboard.c  menu.c  menu.h  sankey.c  sankey.h  settings_row.c  theme.c  theme.h  word_selector.c
main/ui/assets/: icons.h  icons_16.c  icons_24.c  icons_36.c  krux_cn_20.c  krux_cn_20.h  krux_cn_28.c  krux_cn_28.h  signer_cn_20.c  signer_cn_20.h  signer_cn_28.c  signer_cn_28.h  signer_logo_font.c  signer_logo_font.h  signer_logo_lvgl.c  signer_logo_lvgl.h
main/utils/: bip39_filter.c  bip39_filter.h
simulator/: CMakeLists.txt  README.md  lv_conf.h
simulator/data/: README.md
simulator/platform/: README.md
simulator/platform/bsp_sim/: bsp_sim.c
simulator/platform/esp_idf_stubs/: app_menu_stubs.c  freertos_sim.c  nvs_sim.c  stubs.c
simulator/platform/esp_idf_stubs/include/: esp_app_desc.h  nvs.h
simulator/platform/esp_idf_stubs/include/freertos/: task.h
simulator/platform/sd_card_sim/: sd_card_sim.c
simulator/platform/sd_card_sim/include/: sim_sdcard.h
simulator/platform/video_sim/: stb_image.h  v4l2_capture.c  v4l2_capture_macos.mm  video_sim.c
simulator/src/: main_sim.c
tools/qr_bench/: CMakeLists.txt  README.md  qr_bench.c
(+126 files in other folders)
